--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.2.0",
-    "jade": "*",
+    "express": ">= 3.2.0",
+	"jade": "*",
     "stylus": "*",
-    "mongodb": "*",
-    "socket.io": "0.9.10"
+    "mongodb": "*"
+
   },
   "engines": {
-    "node": "0.10.x",
-    "npm": "1.2.x"
+    "node": ">= 0.10.x",
+    "npm": ">= 1.2.x"
   },
   "subdomain": "Pikapika555-Twittcher"
 }
